HW 5 replace linked list